[gd_scene load_steps=6 format=3 uid="uid://dj0eyhixk6gf6"]

[ext_resource type="Script" path="res://Scene/KeySelection/key_selection_ui.gd" id="1_6hvy4"]
[ext_resource type="Theme" uid="uid://dl01gxgiis5ea" path="res://Asset/ui_theme.tres" id="1_acoei"]
[ext_resource type="PackedScene" uid="uid://brrue2l3hnsuk" path="res://Scene/KeySelection/key_list.tscn" id="2_tddgt"]
[ext_resource type="StyleBox" uid="uid://cai2c2pixtda4" path="res://Asset/background_highlighter.tres" id="3_kuski"]
[ext_resource type="PackedScene" uid="uid://c3a7n8undfoen" path="res://Scene/attribute_grid_container.tscn" id="3_w6dn5"]

[node name="KeySelectionUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_acoei")
script = ExtResource("1_6hvy4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270222, 0.270222, 0.270222, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_kuski")

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
columns = 2

[node name="TypeLabel" type="Label" parent="VBoxContainer/PanelContainer/GridContainer"]
layout_mode = 2
text = "Selected Language Type:"

[node name="TypeOptionButton" type="OptionButton" parent="VBoxContainer/PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = 10
button_pressed = true

[node name="SpecificPathLabel" type="Label" parent="VBoxContainer/PanelContainer/GridContainer"]
layout_mode = 2
text = "Path to language files:"

[node name="SpecificPath" type="Label" parent="VBoxContainer/PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.533037, 0.533037, 0.533037, 1)

[node name="LanguageFileFoundLabel" type="Label" parent="VBoxContainer/PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Found files:"

[node name="LanguageFileFound" type="Label" parent="VBoxContainer/PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_kuski")

[node name="KeyList" parent="VBoxContainer/PanelContainer2" instance=ExtResource("2_tddgt")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_kuski")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="VBoxContainer/PanelContainer3/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Value (en):"

[node name="ValueLabelValue" type="Label" parent="VBoxContainer/PanelContainer3/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 4

[node name="AttributeGridContainer" parent="VBoxContainer" instance=ExtResource("3_w6dn5")]
unique_name_in_owner = true
layout_mode = 2

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Label" parent="VBoxContainer/ButtonHBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/ButtonHBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_kuski")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ButtonHBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="AddButton" type="Button" parent="VBoxContainer/ButtonHBoxContainer/PanelContainer4/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Add"

[node name="ChangeButton" type="Button" parent="VBoxContainer/ButtonHBoxContainer/PanelContainer4/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Change"

[node name="RemoveButton" type="Button" parent="VBoxContainer/ButtonHBoxContainer/PanelContainer4/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Remove"

[connection signal="item_selected" from="VBoxContainer/PanelContainer/GridContainer/TypeOptionButton" to="." method="_on_type_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/GridContainer/TypeOptionButton" to="." method="_on_category_switch_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBoxContainer/PanelContainer4/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBoxContainer/PanelContainer4/HBoxContainer/ChangeButton" to="." method="_on_change_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBoxContainer/PanelContainer4/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
